# robotics-design-advisor

./: .gitignore  parts_server.py  pyproject.toml
docs/: mcp-solidworks-setup.md
docs/superpowers/plans/: 2026-07-15-phase4a-mechanism-physics.md  2026-07-15-phase4b-autonomous-coordination.md  2026-07-15-phase4c-design-advisor.md  2026-07-15-solidworks-integration.md
docs/superpowers/specs/: 2026-07-14-step-intelligence-design.md  2026-07-15-phase4-mechanism-coordination-design.md  2026-07-15-solidworks-integration-design.md
scripts/: analyze_gobilda.py  build_catalog.py
src/robotics_design_advisor/: __init__.py  config.py  constants.py
tests/integration/: README.md
tests/unit/: test_analyzer.py  test_assemblies.py  test_autonomous_models.py  test_batch_profiler.py  test_bom_generator.py  test_config.py  test_connection_classifier.py  test_copilot_models.py  test_copilot_presenter.py  test_copilot_session.py  test_design_advisor.py  test_design_synthesizer.py  test_electrical.py  test_electronics_layout.py  test_field.py  test_game_analyzer.py  test_gobilda_patterns.py  test_grabber.py  test_hole_detector.py  test_launcher.py  test_lift.py  test_mcp_server.py  test_mechanics.py  test_mechanism_models.py  test_motion.py  test_motor_selection.py  test_parts_models.py  test_parts_server.py  test_path_planner.py  test_path_safety.py  test_patterns.py  test_phase4c_models.py  test_placement.py  test_profile_builder.py  test_protocol.py  test_query.py  test_recommendations.py  test_registry.py  test_resolver.py  test_resolver_profile.py  (+8 more)
(+74 files in other folders)
