[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "robotics-design-advisor"
version = "1.0.0"
description = "Engineering intelligence for FTC/FRC robot design — mechanics, electrical, safety, and design variant generation"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Sateesh Seetharamaiah"},
]

dependencies = []

[project.optional-dependencies]
server = [
    "mcp[cli]>=1.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4.0",
    "mypy>=1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
